# AI-Sticker-Ecommerce

./: .env.example  .gitignore  BLOG_GENERATOR_README.md  CLAUDE.md  README.md  README_NEW.md  app.py  app_smart.py  check_ports.py  cli.py  feishu_blog_app.py  feishu_chat_app.py  pyproject.toml  requirements.txt  restart.sh  start.sh  status.sh  stop.sh  test_blog_generation.py  web_app.py
config/: default.yaml  development.yaml  production.yaml  store_profile.yaml
deploy/: feishu-blog-bot.service  feishu-sticker-bot.service  logrotate-feishu-bots  setup.sh  setup_macmini.sh
docs/: CODE_REVIEW.md  COMPLETION_CHECKLIST.md  ChatGPT-毕业季卡贴题材设计.md  ChatGPT-热点贴纸题材推荐.md  INDEX.md  PLAN-preview-and-edit-flow.md  PLAN_V2_AI_STICKER_PIPELINE.md  PROJECT_SUMMARY.md  STYLE_ANALYZER_SUMMARY.md  TIKTOK_PRODUCT_API_GUIDE.md  amazon_custom_listing_design.md  amazon_sticker_decal_attributes.example.json  multichannel_roadmap.md  page-feature-history.md  preference-workflow.md  script-generation.md  sticker-pack-api-examples.md  sticker-pack-checklist.md  sticker-pack-generator.md  sticker-pack-overview.md  sticker-pack-quickstart.md  sticker-pack-troubleshooting.md  style-analyzer-guide.md  tiktok-topic-sticker-pack-pipeline.md  tiktok_ads_contract.md  tiktok_product_ads_access_request.md  tiktok_product_shipping_discount_contract.md  tiktok_video_promotion.md  好我直接把你要的第一版默认配置_2026-04-08-11-05-42.md  我在把你这份TikTok评审B_2026-04-08-15-04-28.md  我现在直接把你要的三块落成数据_2026-04-08-15-03-26.md  我直接把它收成一版可开发的V1_2026-04-08-11-06-34.md  我直接把新链路里最关键的提示词_2026-04-08-15-03-07.md  智能推荐使用示例.md  智能推荐系统说明.md
scripts/: CLAUDE_CODE_安装指南.md  ChatGPT-Route 66 贴纸设计.md  amazon_probe.py  backfill_external_source_previews.py  batch_apply_discount.py  batch_generate_images.py  batch_hand_hold_mixed.py  batch_hand_hold_replace.py  batch_run.py  batch_update_stock.py  deactivate_sticker_shop_extras.py  debug_config.py  debug_tkshop_main_image_edit.py  demo_md_to_shopify.py  dump_ops_logs.py  export_pack_shop_listings.py  fetch_tiktok_trends.py  fill_listing_gallery_and_push.py  fix_graduation_2026_to_series.py  install.ps1  (+40 more)
(+344 files in other folders)
